# ziper

./: .gitignore  README.md  pyproject.toml
tests/: test_iter.py
ziper/: __init__.py  iter.py
